fixed scrollbar, it's normal now

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
   height: 100%;
   width: 100%;
   margin: 0;
-  overflow: hidden;
+  overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -21,19 +21,22 @@ body {
 /* code {
   font-family: "Courier New";
 } */
-
 ::-webkit-scrollbar {
-  width: 7px;
+  width: 8px;
 }
 
-/* ::-webkit-scrollbar-track {
-  background: #33013c;
-} */
+::-webkit-scrollbar-track {
+  background-color: #0a0a0a; /* Very dark track */
+  border-radius: 10px;
+}
 
 ::-webkit-scrollbar-thumb {
-  background: #e3e3e3;
+  background-color: #c0c0c0; /* Lighter gray */
+  border-radius: 10px;
+  box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.6); /* Inner shadow for depth */
+  margin: 1px; /* Optional: adds some gap */
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #c6c6c6;
+  background-color: #b0b0b0;
 }
